--- a/.README.md
+++ b/.README.md
@@ -1,2 +1,2 @@
-This is the Multi container project, created with tutorials series of Stephen Grider. 
+This is the Multi-container project 
 name: Docker and kubernetes
